# linux-edrkvq

./: .gitignore  .gitmodules  CMakeLists.txt  architecture.txt  install.sh  main_eBPF.c  run  t.txt  uninstall.sh
configs/: SentinelEDR.service  ca.pem  ca_self.pem  self_defense_policy.json
debian/: postinst
src/kernel/: common.h  common_kern.h  ioc_block.bpf.c  self_defense.bpf.c  self_defense.h
src/user/: agent_connection.cpp  agent_connection.h  common_user.h  executable_ioc_blocker.cpp  executable_ioc_blocker.h  ioc_database.cpp  ioc_database.h  main.c  main.cpp  policy_manager.c  policy_manager.cpp  policy_manager.h  utils.cpp  utils.h
test_environment/: Dockerfile  SentinelEDR-1.0.0-linux-x86_64.deb  run_test.sh
test_environment/attack_test/: attack_test  bash.sh  hash_file.py  spam_rq.py  test0.txt  test1.txt
test_environment/attack_test/LD_PRELOAD/: hack.c  main  main.c  run
test_environment/attack_test/attack_files/: attack_file.txt  attack_test  attack_test.cpp
test_environment/attack_test/attack_processes/: attack_resource  attack_resource.c  attack_resource.cpp  injection_shellcode  injection_shellcode.cpp  main  main.cpp
test_environment/attack_test/attack_socket/: attack_test  attack_test.cpp
test_environment/attack_test/disable_module_loader/: Makefile  docs  my_driver.c
test_environment/attack_test/fileless_malware/: attack_test  attack_test.cpp  hello_world  hello_world.cpp
test_environment/build_test/: SentinelEDR-1.0.0-linux-x86_64.deb  uninstall.sh
test_environment/edr_service/: edr.service  edr_control.c  edr_launcher.c  edr_main.c  run.sh
test_environment/server/: docs  gen_certs.sh  server.py  sha256.py
test_environment/server/certs/: ca.key  ca.pem  ca.srl  server.cnf  server.crt  server.csr  server.key
test_environment/tmp/: main  main.cpp  test  test.cpp  white_list  white_list.cpp
test_environment/tmp/test_virus/: anansi  anansi.c  test
tools/IOC_DB/: ioc_ip
tools/cmake/: FindBpfObject.cmake
